Tidy up the CSS and fix spacing on index

--- a/styles/style.css
+++ b/styles/style.css
@@ -4,18 +4,15 @@
     font-family: Arial, Helvetica, sans-serif
 }
 
-/* Styling for the "Return to Back" button */
-.back {
-    display: inline-block;
-    margin-top: -10px;
-}
-
+/* Header */
 header {
     text-align: center;
 }
-header h1 {
-    margin: 20px 0 0 0;
+header h1 { 
     font-size: 36px;
+    
+    /* Changed margins to keep the main title close to "Return to Back" */
+    margin: 20px 0 0 0;
 }
 h2 {
     font-size: 28px;
@@ -26,23 +23,29 @@ h3 {
     color: #999;
     margin-top: 5px;
 }
+/* Styling for the "Return to Back" button */
+.back {
+    display: inline-block;
+    margin-top: -10px;
+}
+
+/* Body */
 .wrapper {
     width: 60%;
-    margin: 0 auto;
+    margin: 15px auto;
     background-color: #DDD;
     padding: 4px 20px;
 }
-
 p {
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 17px;
     line-height: 1.5;
 }
-
 li {
     font-size: 18px;
     line-height: 1.5;
 }
+
 /* Media queries */
 @media (min-width: 800px) {
     
